# for_step_academy

./: README.md  pyproject.toml
py_solution/: __main__.py  connector.py  req.txt  setting.py  windows.py
py_solution/cred/: tuya_cred.ini
py_solution/devices/: kettle.json
